--- a/assets/scss/card.scss
+++ b/assets/scss/card.scss
@@ -5,9 +5,11 @@
     gap: 30px;
     
     .my-card{
-        width:250px;
+        text-decoration: none;
+        color: black;
+        width:215px;
         max-width:100%;
-        height:250px;
+        height:215px;
         max-height:100%;
         display:flex;
         align-items: center;
