--- a/assets/scss/partials/footer.scss
+++ b/assets/scss/partials/footer.scss
@@ -1,8 +1,8 @@
 .my-footer{
-    background-color: var(--bs-gray-900);
-    position:absolute;
-    bottom:0;
-    z-index:10;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 6rem; 
     p{
         color: var(--bs-white);
     }
