--- a/assets/scss/card.scss
+++ b/assets/scss/card.scss
@@ -3,7 +3,7 @@
     justify-content: center;
     flex-wrap: wrap;
     gap: 30px;
-    .card:hover{
+    .annedlida.card:hover{
         background-color: #52d1ff
     }
     
