--- a/assets/css/card.compiled.css
+++ b/assets/css/card.compiled.css
@@ -4,14 +4,32 @@
   flex-wrap: wrap;
   gap: 30px;
 }
+.card-side .annedlida.card:hover {
+  background-color: #52d1ff;
+}
 .card-side .my-card {
-  width: 250px;
+  text-decoration: none;
+  color: black;
+  width: 215px;
   max-width: 100%;
-  height: 250px;
+  height: 215px;
   max-height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 10px;
   box-shadow: 3px 3px 3px 3px gray;
+}
+
+.admin-card {
+  text-decoration: none;
+  color: white;
+  width: 100px;
+  max-width: 100%;
+  height: 100px;
+  max-height: 100%;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  background-color: var(--bs-gray-900);
 }
