--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -67,15 +67,45 @@
   --bs-highlight-bg: #fff3cd;
 }
 
-html {
-  /*font-family: 'Advent Pro';*/
+.pagination {
+  --bs-pagination-padding-x: 0.75rem;
+  --bs-pagination-padding-y: 0.375rem;
+  --bs-pagination-font-size: 1rem;
+  --bs-pagination-color: var(--bs-pagination-border-color);
+  --bs-pagination-bg: var(--bs-gray-900);
+  --bs-pagination-border-width: 1px;
+  --bs-pagination-border-color: #dee2e6;
+  --bs-pagination-border-radius: 0.375rem;
+  --bs-pagination-hover-color: var(--bs-red);
+  --bs-pagination-hover-bg: #e9ecef;
+  --bs-pagination-hover-border-color: #dee2e6;
+  --bs-pagination-focus-color: var(--bs-link-hover-color);
+  --bs-pagination-focus-bg: #e9ecef;
+  --bs-pagination-focus-box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
+  --bs-pagination-active-color: #fff;
+  --bs-pagination-active-bg: var(--bs-red);
+  --bs-pagination-active-border-color: #0d6efd;
+  --bs-pagination-disabled-color: #6c757d;
+  --bs-pagination-disabled-bg: #fff;
+  --bs-pagination-disabled-border-color: #dee2e6;
+  display: flex;
+  padding-left: 0;
+  list-style: none;
 }
 
-.page-title {
-  background-color: var(--bs-gray-900);
-  align-items: center;
-  display: flex;
-  justify-content: center;
-  color: white;
+.btn-primary {
+  --bs-btn-color: #fff;
+  --bs-btn-bg: var(--bs-red);
+  --bs-btn-border-color: unset;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #9f2733;
+  --bs-btn-hover-border-color: #9f2733;
+  --bs-btn-focus-shadow-rgb: 49,132,253;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #279f33;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: #63000a;
+  --bs-btn-disabled-border-color: var(--bs-red);
 }
 
